update workflow demo in Jupyter

--- a/src/nlp/jupyter/Workflow_Demo.ipynb
+++ b/src/nlp/jupyter/Workflow_Demo.ipynb
@@ -5,7 +5,7 @@
    "id": "0d288bbe-c31c-4be8-9b5d-cb11b5a3a514",
    "metadata": {},
    "source": [
-    "# Demo For NLP Workflow "
+    "# Demo For NLP Workflow: based on branch wangc/nlp"
    ]
   },
   {
@@ -30,6 +30,7 @@
     "import pandas as pd\n",
     "import spacy\n",
     "import logging\n",
+    "import numerizer \n",
     "#######################\n",
     "\n",
     "# Settings #\n",
@@ -66,6 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cleanDoc = True         # prepocessor the raw doc text, i.e., remove brackets, repeatings, punctuations.\n",
+    "numerizerDoc = True     # converts natural language numerics into ints and floats\n",
+    "spellCorrectDoc = False # spell check and perform corrections\n",
+    "\n",
     "entLabel = \"pump_component\"       # user defined entity label\n",
     "entId = \"SSC\"                     # user defined entity ID \n",
     "causalLabel = \"causal_keywords\"   # user defined causal keyword label \n",
@@ -169,9 +174,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-Dec-22 10:55:28 nlp.RuleBasedMatcher INFO     Create instance of RuleBasedMatcher\n",
-      "16-Dec-22 10:55:31 nlp.nlp_utils        INFO     Model: core_web_lg, Language: en\n",
-      "16-Dec-22 10:55:31 nlp.nlp_utils        INFO     Available pipelines:pysbdSentenceBoundaries, tok2vec, tagger, parser, attribute_ruler, lemmatizer, mergePhrase, normEntities, initCoref, aliasResolver, coreferee, anaphorCoref, anaphorEntCoref\n"
+      "11-Jan-23 12:58:31 nlp.RuleBasedMatcher INFO     Create instance of RuleBasedMatcher\n",
+      "11-Jan-23 12:58:34 nlp.nlp_utils        INFO     Model: core_web_lg, Language: en\n",
+      "11-Jan-23 12:58:34 nlp.nlp_utils        INFO     Available pipelines:pysbdSentenceBoundaries, tok2vec, tagger, parser, attribute_ruler, lemmatizer, mergePhrase, normEntities, initCoref, aliasResolver, coreferee, anaphorCoref, anaphorEntCoref\n"
      ]
     }
    ],
@@ -202,15 +207,54 @@
     "with open(textFile, 'r') as ft:\n",
     "    doc = ft.read()\n",
     "\n",
-    "\n",
-    "doc = preprocess(doc)\n",
+    "# clean doc\n",
+    "if cleanDoc:\n",
+    "    doc = preprocess(doc)\n",
+    "if numerizerDoc:\n",
+    "    doc = numerizer.numerize(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3eaba8c-1628-430c-aa29-a3aba4b4ebb5",
+   "metadata": {},
+   "source": [
+    "### 7. Correct the doc "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9c4f322a-787c-4414-81a2-913d988a986e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "availCheckers = ['autocorrect', 'ContextualSpellCheck']\n",
+    "if spellCorrectDoc: \n",
+    "    checker = SpellChecker(doc, checker=availCheckers[0])\n",
+    "    misspelledWords = checker.getMisspelledWords()\n",
+    "    print('MisspelledWords: ', ','.join(misspelledWords))\n",
+    "    updatedWords = input('Provide the words that will not be treated as misspelled words (comma sperated words):')\n",
+    "    updatedWords = [word.strip() for word in updatedWords.split(',')]\n",
+    "    if len(updatedWords) != 0:\n",
+    "        checker.addWordsToDictionary(updatedWords)\n",
+    "    doc = checker.correct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "075cb669-1bea-4955-9d8b-41f8e42fddda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# raw text need to convert to lower case so that Spacy can perform POS correctly\n",
     "doc = doc.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "85a7243b-c947-4aa0-961d-f64fbd225988",
    "metadata": {},
    "outputs": [
@@ -218,31 +262,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     Start to extract health status\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  No status identified for \"lip\" in \"rh120c bucket front lip changeout.\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     Start to extract health status\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  No status identified for \"lip\" in \"rh120c bucket front lip changeout.\n",
       "\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"teeth\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  No status identified for \"wear package\" in \"repair wear package rhs inside bkt wall.\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"teeth\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  No status identified for \"wear package\" in \"repair wear package rhs inside bkt wall.\n",
       "\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"lower wear edge plate\" dep_ is \"advmod\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"lube fitting\" dep_ is \"nmod\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  No status identified for \"bucket\" in \"weld npb07 on spare bucket.\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"lower wear edge plate\" dep_ is \"advmod\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"lube fitting\" dep_ is \"nmod\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  No status identified for \"bucket\" in \"weld npb07 on spare bucket.\n",
       "\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"bucket\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease lines\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"wear plates\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"hydraulic oil hose\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  No status identified for \"bucket\" in \"cracks under heel of bucket.\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"bucket\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease lines\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"wear plates\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"grease line\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"hydraulic oil hose\" dep_ is \"ROOT\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  No status identified for \"bucket\" in \"cracks under heel of bucket.\n",
       "\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Entity \"bucket\" dep_ is \"advcl\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     End of health status extraction!\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     Start to extract causal relation using OPM model information\n"
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Entity \"bucket\" dep_ is \"advcl\" is not among valid list \"[nsubj, nsubjpass, pobj, dobj, compound]\"\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     End of health status extraction!\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     Start to extract causal relation using OPM model information\n"
      ]
     },
     {
@@ -256,11 +300,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher WARNING  Issue found: 'cause list': None, and 'effect list': None were identified in sentence 'replace damaged lube line on rhs bucket.\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher WARNING  Issue found: 'cause list': None, and 'effect list': None were identified in sentence 'replace damaged lube line on rhs bucket.\n",
       "'\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     End of causal relation extraction!\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     Start to use general extraction method to extract causal relation\n",
-      "16-Dec-22 10:55:32 nlp.RuleBasedMatcher INFO     End of causal relation extraction using general extraction method!\n"
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     End of causal relation extraction!\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     Start to use general extraction method to extract causal relation\n",
+      "11-Jan-23 12:58:57 nlp.RuleBasedMatcher INFO     End of causal relation extraction using general extraction method!\n"
      ]
     },
     {
@@ -289,19 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1517ae33-239d-49d2-9d8c-02fba74fe7b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Following used to retrieve causal effect information\n",
+    "# # Following used to retrieve causal effect information\n",
     "# causalEffect = config.nlpConfig['files']['output_causal_effect_file']\n",
     "# causalEffect = pd.read_csv(causalEffect)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a41cb301-01f3-4975-9124-b3ac18118395",
    "metadata": {},
    "outputs": [],
@@ -309,201 +353,6 @@
     "healthStatus = config.nlpConfig['files']['output_health_status_file']\n",
     "healthStatus = pd.read_csv(healthStatus)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a91e2b35-6dbc-4322-b493-451fb71ae825",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "f3790b60-959b-4947-982f-a62e5369c564",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>entities</th>\n",
-       "      <th>status keywords</th>\n",
-       "      <th>health statuses</th>\n",
-       "      <th>conjecture</th>\n",
-       "      <th>sentence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>bucket</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>n't open</td>\n",
-       "      <td>True</td>\n",
-       "      <td>bucket won't open.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>bucket cyl</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>leaking</td>\n",
-       "      <td>False</td>\n",
-       "      <td>l h bucket cyl leaking.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>bucket</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>swap</td>\n",
-       "      <td>False</td>\n",
-       "      <td>swap bucket.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>bucket tooth</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>fit</td>\n",
-       "      <td>False</td>\n",
-       "      <td>fit bucket tooth.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>bucket tooth</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>refit</td>\n",
-       "      <td>False</td>\n",
-       "      <td>refit bucket tooth.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>244</td>\n",
-       "      <td>bucket tooth</td>\n",
-       "      <td>miss</td>\n",
-       "      <td>_</td>\n",
-       "      <td>False</td>\n",
-       "      <td>bucket tooth missing _user_.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>245</td>\n",
-       "      <td>bucket tooth</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>replace missing bucket tooth.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>246</td>\n",
-       "      <td>bucket wear plates</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>repair</td>\n",
-       "      <td>False</td>\n",
-       "      <td>repair bucket wear plates.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>247</td>\n",
-       "      <td>bucket</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>bucket cracks.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>248</td>\n",
-       "      <td>bucket tooth</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>replace bucket tooth</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>249 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0            entities status keywords health statuses  \\\n",
-       "0             0              bucket             NaN        n't open   \n",
-       "1             1          bucket cyl             NaN         leaking   \n",
-       "2             2              bucket             NaN            swap   \n",
-       "3             3        bucket tooth             NaN             fit   \n",
-       "4             4        bucket tooth             NaN           refit   \n",
-       "..          ...                 ...             ...             ...   \n",
-       "244         244        bucket tooth            miss               _   \n",
-       "245         245        bucket tooth             NaN         missing   \n",
-       "246         246  bucket wear plates             NaN          repair   \n",
-       "247         247              bucket             NaN             NaN   \n",
-       "248         248        bucket tooth             NaN             NaN   \n",
-       "\n",
-       "     conjecture                       sentence  \n",
-       "0          True             bucket won't open.  \n",
-       "1         False        l h bucket cyl leaking.  \n",
-       "2         False                   swap bucket.  \n",
-       "3         False              fit bucket tooth.  \n",
-       "4         False            refit bucket tooth.  \n",
-       "..          ...                            ...  \n",
-       "244       False   bucket tooth missing _user_.  \n",
-       "245       False  replace missing bucket tooth.  \n",
-       "246       False     repair bucket wear plates.  \n",
-       "247       False                 bucket cracks.  \n",
-       "248       False           replace bucket tooth  \n",
-       "\n",
-       "[249 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "healthStatus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8e04490-8a80-4247-aeb1-409293b19904",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
