--- a/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
+++ b/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
@@ -1221,8 +1221,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8c08eec9-cf3e-4e3c-8be6-31dbad5107a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "input a list: 'a, c, d'\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input('input a list:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d848272c-de34-4599-8c30-e21c05a357f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5386f93e-2332-42ea-9e06-b81d7d7fdcb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'a, c, d'\""
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a60f4b1-8c21-4d87-890c-6d7379e24a85",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1230,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b32f3dd-3177-4686-a27d-b08b83107325",
+   "id": "96df7fb5-7dd2-4c9d-8c4c-91a9eba1b2ad",
    "metadata": {},
    "outputs": [],
    "source": []
