added new capabilities and comments

--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "a807aa3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warming up PyWSD (takes ~10 secs)... took 4.767230987548828 secs.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, time\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
@@ -18,21 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
    "source": [
     "#text = 'Perf ann sens calib of cyl'\n",
-    "text = 'High conc of hydrogen obs'\n",
+    "#text = 'High conc of hydrogen obs'\n",
     "#text = 'High conc of hydrogen obs every wk'\n",
+    "#text = 'High conct of hydrogen obs every wk'\n",
+    "text = 'Perfr calib of chan'\n",
     "# pre-processing\n",
     "text = text.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2c919bef",
    "metadata": {},
    "outputs": [
@@ -74,19 +84,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mandd/opt/miniconda3/envs/myEnv/lib/python3.8/site-packages/spacy/util.py:837: UserWarning: [W095] Model 'en_core_web_sm' (3.2.0) was trained with spaCy v3.2 and may not be 100% compatible with the current version (3.3.0). If you see errors or degraded performance, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
-      "  warnings.warn(warn_msg)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['high concentrate of hydrogen observe',\n",
-       " 'high concerning of hydrogen observe',\n",
-       " 'high concentration of hydrogen observe']"
+       "'perform calibration of channel'"
       ]
      },
      "execution_count": 7,
@@ -95,15 +95,15 @@
     }
    ],
    "source": [
-    "checker = SpellChecker(text, checker='ContextualSpellCheck')\n",
-    "cleanedText = checker.handleAbbreviations(abbrList, type='hard')\n",
+    "checker = SpellChecker(text, checker='autocorrect')\n",
+    "cleanedText = checker.handleAbbreviations(abbrList, type='mixed')\n",
     "cleanedText"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd6d4925",
+   "id": "e4302bc3",
    "metadata": {},
    "outputs": [],
    "source": []
