--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a807aa3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 4.767230987548828 secs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, time\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
@@ -26,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
@@ -35,27 +27,17 @@
     "#text = 'High conc of hydrogen obs'\n",
     "#text = 'High conc of hydrogen obs every wk'\n",
     "#text = 'High conct of hydrogen obs every wk'\n",
-    "text = 'Perfr calib of chan'\n",
+    "text = 'Perfr chan calib of chan'\n",
     "# pre-processing\n",
     "text = text.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2c919bef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [Abbreviation, Full]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import abbreviation list\n",
     "abbrList = pd.read_excel('../data/abbreviations.xlsx') \n",
@@ -79,21 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1832fdf6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'perform calibration of channel'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "checker = SpellChecker(text, checker='autocorrect')\n",
     "cleanedText = checker.handleAbbreviations(abbrList, type='mixed')\n",
@@ -103,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4302bc3",
+   "id": "71adc728",
    "metadata": {},
    "outputs": [],
    "source": []
