--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a807aa3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warming up PyWSD (takes ~10 secs)... took 4.723144054412842 secs.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, time\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
@@ -18,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
@@ -26,18 +34,28 @@
     "#text = 'Perf ann sens calib of cyl'\n",
     "#text = 'High conc of hydrogen obs'\n",
     "#text = 'High conc of hydrogen obs every wk'\n",
-    "#text = 'High conct of hydrogen obs every wk'\n",
-    "text = 'Perfr chan calib of chan'\n",
+    "text = 'High conct of hydrogen obs every wk'\n",
+    "#text = 'Perfr chan calib of chan'\n",
     "# pre-processing\n",
     "text = text.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2c919bef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Abbreviation, Full]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "# import abbreviation list\n",
     "abbrList = pd.read_excel('../data/abbreviations.xlsx') \n",
@@ -61,10 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1832fdf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'high concentration of hydrogen observe every week'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "checker = SpellChecker(text, checker='autocorrect')\n",
     "cleanedText = checker.handleAbbreviations(abbrList, type='mixed')\n",
@@ -74,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71adc728",
+   "id": "1b647240",
    "metadata": {},
    "outputs": [],
    "source": []
