--- a/src/nlp/similarity/test_synset_similarity.ipynb
+++ b/src/nlp/similarity/test_synset_similarity.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b460f1e1-f63d-4199-aa75-513c97e40e1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import synsetUtils as SU\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5f7b2b20-b751-4d06-8eb6-8b43aacde955",
    "metadata": {},
    "outputs": [],
@@ -23,13 +22,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "1a168728-3b3b-44d2-88ac-a36618191b90",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import synsetUtils as SU\n",
+    "\n",
+    "sents = ['The workers at the industrial plant were overworked',\n",
+    "'The plant was no longer bearing flowers']\n",
+    "\n",
     "sentSynsets = SU.convertSentsToSynsets(sents)\n",
     "similarity = SU.synsetListSimilarity(sentSynsets[0], sentSynsets[1], delta=.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8b828799-15d6-4a1f-9f79-bd00de8328d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.43946127500409304"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8a81268-29ea-4ef4-9a36-53088374d54d",
+   "metadata": {},
+   "source": [
+    " ### Using disambiguation method to create synsets "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b349155c-6e69-42c5-bc84-a128ea7d8cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warming up PyWSD (takes ~10 secs)... took 2.2748448848724365 secs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import simUtils\n",
+    "import synsetUtils as SU\n",
+    "\n",
+    "sents = ['The workers at the industrial plant were overworked',\n",
+    "'The plant was no longer bearing flowers']\n",
+    "\n",
+    "sentSynsets = simUtils.convertSentsToSynsetsWithDisambiguation(sents)\n",
+    "similarity = SU.synsetListSimilarity(sentSynsets[0], sentSynsets[1], delta=.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4f0367b-c473-42e0-8733-c87b5be4ac94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.31713942870949496"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarity"
    ]
   },
   {
@@ -42,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1c8b368e-e76b-4f4b-94c7-b1c72a490492",
    "metadata": {},
    "outputs": [
@@ -50,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "168.84652590751648 second\n"
+      "154.99554777145386 second\n"
      ]
     }
    ],
@@ -66,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "71a8acbf-d911-48a6-a971-5e9185cad99e",
    "metadata": {},
    "outputs": [
@@ -74,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.668143033981323 second\n"
+      "4.509129047393799 second\n"
      ]
     }
    ],
@@ -87,8 +166,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "66aee9d8-e0b5-4211-b2d1-c2a7133dd3c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import simUtils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "523fef2d-9490-4595-a9d9-44d7fd9b0a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4552650451660156 second\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "sentSynsets = []\n",
+    "for i in range(1000):\n",
+    "    for j in range(len(sents)):\n",
+    "        _, synsetsA = simUtils.sentenceSenseDisambiguationPyWSD(sents[j], senseMethod='simple_lesk', simMethod='path')\n",
+    "        sentSynsets.append(synsetsA)\n",
+    "print('%s second'% (time.time()-st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b04413f-e947-4b8c-a5b8-167bab4192d6",
    "metadata": {},
    "outputs": [],
    "source": []
