--- a/src/nlp/similarity/test_synset_similarity.ipynb
+++ b/src/nlp/similarity/test_synset_similarity.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b460f1e1-f63d-4199-aa75-513c97e40e1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time"
+    "import time\n",
+    "import synsetUtils as SU\n",
+    "import simUtils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "5f7b2b20-b751-4d06-8eb6-8b43aacde955",
    "metadata": {},
    "outputs": [],
@@ -22,23 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "1a168728-3b3b-44d2-88ac-a36618191b90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import synsetUtils as SU\n",
-    "\n",
     "sents = ['The workers at the industrial plant were overworked',\n",
     "'The plant was no longer bearing flowers']\n",
     "\n",
-    "sentSynsets = SU.convertSentsToSynsets(sents)\n",
+    "sentSynsets = simUtils.convertSentsToSynsets(sents)\n",
     "similarity = SU.synsetListSimilarity(sentSynsets[0], sentSynsets[1], delta=.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "8b828799-15d6-4a1f-9f79-bd00de8328d5",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "0.43946127500409304"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,18 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "b349155c-6e69-42c5-bc84-a128ea7d8cb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 2.2748448848724365 secs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import simUtils\n",
     "import synsetUtils as SU\n",
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "f4f0367b-c473-42e0-8733-c87b5be4ac94",
    "metadata": {},
    "outputs": [
@@ -102,7 +94,7 @@
        "0.31713942870949496"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1c8b368e-e76b-4f4b-94c7-b1c72a490492",
    "metadata": {},
    "outputs": [
@@ -129,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "154.99554777145386 second\n"
+      "16.088321924209595 second\n"
      ]
     }
    ],
@@ -138,14 +130,14 @@
     "'The plant was no longer bearing flowers']\n",
     "\n",
     "st = time.time()\n",
-    "for i in range(1000):\n",
-    "    sentSynsets = SU.convertSentsToSynsets(sents)\n",
+    "for i in range(100):\n",
+    "    sentSynsets = simUtils.convertSentsToSynsets(sents)\n",
     "print('%s second'% (time.time()-st))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "71a8acbf-d911-48a6-a971-5e9185cad99e",
    "metadata": {},
    "outputs": [
@@ -153,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.509129047393799 second\n"
+      "4.915737867355347 second\n"
      ]
     }
    ],
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "66aee9d8-e0b5-4211-b2d1-c2a7133dd3c7",
    "metadata": {},
    "outputs": [],
@@ -176,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "523fef2d-9490-4595-a9d9-44d7fd9b0a4a",
    "metadata": {},
    "outputs": [
@@ -184,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4552650451660156 second\n"
+      "2.5565760135650635 second\n"
      ]
     }
    ],
