--- a/src/nlp/similarity/test_synset_similarity.ipynb
+++ b/src/nlp/similarity/test_synset_similarity.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b460f1e1-f63d-4199-aa75-513c97e40e1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warming up PyWSD (takes ~10 secs)... took 4.427106142044067 secs.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import synsetUtils as SU\n",
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "5f7b2b20-b751-4d06-8eb6-8b43aacde955",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1a168728-3b3b-44d2-88ac-a36618191b90",
    "metadata": {},
    "outputs": [],
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8b828799-15d6-4a1f-9f79-bd00de8328d5",
    "metadata": {},
    "outputs": [
@@ -48,7 +56,7 @@
        "0.43946127500409304"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "b349155c-6e69-42c5-bc84-a128ea7d8cb8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f4f0367b-c473-42e0-8733-c87b5be4ac94",
    "metadata": {},
    "outputs": [
@@ -94,7 +102,7 @@
        "0.31713942870949496"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1c8b368e-e76b-4f4b-94c7-b1c72a490492",
    "metadata": {},
    "outputs": [
@@ -121,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16.088321924209595 second\n"
+      "17.414528846740723 second\n"
      ]
     }
    ],
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "71a8acbf-d911-48a6-a971-5e9185cad99e",
    "metadata": {},
    "outputs": [
@@ -145,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.915737867355347 second\n"
+      "5.30937123298645 second\n"
      ]
     }
    ],
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "66aee9d8-e0b5-4211-b2d1-c2a7133dd3c7",
    "metadata": {},
    "outputs": [],
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "523fef2d-9490-4595-a9d9-44d7fd9b0a4a",
    "metadata": {},
    "outputs": [
@@ -176,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5565760135650635 second\n"
+      "2.727288007736206 second\n"
      ]
     }
    ],
