--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 4.723144054412842 secs.\n"
+      "Warming up PyWSD (takes ~10 secs)... took 4.66923713684082 secs.\n"
      ]
     }
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
@@ -34,15 +34,19 @@
     "#text = 'Perf ann sens calib of cyl'\n",
     "#text = 'High conc of hydrogen obs'\n",
     "#text = 'High conc of hydrogen obs every wk'\n",
-    "text = 'High conct of hydrogen obs every wk'\n",
+    "#text = 'High conct of hydrogen obs every wk'\n",
     "#text = 'Perfr chan calib of chan'\n",
+    "#text = \"esf pump room and fuel bldg test\"\n",
+    "#text = 'cal press xmtr sit elev'\n",
+    "text = 'perform thermography survey of pzr htr terminations' \n",
+    "#text = 'plant mods comp iso mode prep (diwo s closed / dcp signoffs / inservice verificiations / restoration) (see rnb)'\n",
     "# pre-processing\n",
     "text = text.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2c919bef",
    "metadata": {},
    "outputs": [
@@ -79,31 +83,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "1832fdf6",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pzr [384]\n",
+      "htr [545]\n",
+      "{'pzr': ['pressurizer'], 'htr': ['heater']}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'high concentration of hydrogen observe every week'"
+       "'perform thermography survey of pressurizer heater terminations'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checker = SpellChecker(text, checker='autocorrect')\n",
+    "checker = SpellChecker(text, checker='mixed')\n",
     "cleanedText = checker.handleAbbreviations(abbrList, type='mixed')\n",
     "cleanedText"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "0c957d4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pressurizer']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Preprocessing import SpellChecker\n",
+    "checker = SpellChecker(cleanedText, checker='autocorrect')\n",
+    "checker.getMisspelledWords()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "060d6a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "perform thermography survey of pressurizes heater terminations\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleanedText = checker.correct()\n",
+    "print(cleanedText)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1b647240",
+   "id": "f50a5709",
    "metadata": {},
    "outputs": [],
    "source": []
